feat: implement robust model management and server liveness checks    2    3 - Add loadModel, unloadModel, and isModelReady to Triton client.    4 - Implement server liveness verification with retries at application startup.    5 - Add repository index check to verify model existence before loading.    6 - Support explicit model control mode in Docker runner script.    7 - Auto-adjust default ports when switching to GRPC protocol.    8 - Log CLI configuration parameters on startup.    9 - Fix build issues by removing non-existent source references in CMake.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -142,6 +142,8 @@
             "program": "${workspaceFolder}/build/tritonic",
             "args": ["--source=data/images/dog.jpg", 
             "--serverAddress=localhost",
+            "--port=8001",
+            "--protocol=grpc",
             "--labelsFile=labels/coco.txt",
             "--model=yolov8x_onnx",
             "--model_type=yolo",
@@ -333,7 +335,23 @@
             ],
             "environment": [{ "name": "config", "value": "Debug" }],
             "cwd": "${workspaceFolder}" 
-        },      
+        },    
+        {
+            "name": "yolo26_seg_onnx",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/build/tritonic",
+            "args": ["--source=data/images/bus.jpg", 
+            "--serverAddress=localhost",
+            "--port=8001",
+            "--protocol=grpc",
+            "--labelsFile=labels/coco.txt",
+            "--model=yolo26_seg_onnx",
+            "--model_type=yolo26seg"
+            ],
+            "environment": [{ "name": "config", "value": "Debug" }],
+            "cwd": "${workspaceFolder}" 
+        },                   
         {
             "name": "raft_large_torchscript",
             "type": "cppdbg",
